--- a/pertemuan 5/praktikum/alpukat.html
+++ b/pertemuan 5/praktikum/alpukat.html
@@ -68,7 +68,6 @@
             font-weight: bold;
         }
 
-
         .khasiat {
             color: rgb(0, 0, 0);
             text-align: center;
@@ -76,6 +75,7 @@
             background-image: url("images/bg.jpg");
             background-size: cover;
             background-repeat: no-repeat;
+            border-radius: 10px;
         }
 
         .khasiat p {
@@ -144,29 +144,25 @@
     <p>
         Dalam satu sajian buah alpukat (sekitar 50 gram) terdapat mengandung 80 kalori,
         8 gram lemak, 4 gram karbohidrat dan sekitar 1 gram protein.
-        Selain itu terdapat juga berbagai macam vitamin seperti E, K, B5 dan B6.</p>
-    <div class="khasiat center">
-        <h2>Berikut khasiat buah Alpukat:</h2>
-        <h3>1. Vitamin E</h3>
-        <p>Memiliki <i><b>anti aging</b></i> yang bisa mendorong perawatan kulit alami.</p>
-        <h3>2. Vitamin K</h3>
-        <p>Membantu <b>mencegah</b> terjadinya <i>osteoporosis.</i></p>
-        <h3>3. Vitamin B5</h3>
-        <p>Membantu <b>menurunkan</b> tingkat stress, meringankan rasa sakit.</p>
-        <h3>4. Vitamin B6</h3>
-        <p>Membantu <i><b>treat diabetes,</b></i> pendarahan menstruasi, dan insomnia</p>
-    </div>
-
-
+        Selain itu terdapat juga berbagai macam vitamin seperti E, K, B5 dan B6.
+        </p>
+        <div class="khasiat center">
+            <h2>Berikut khasiat buah Alpukat:</h2>
+            <h3>1. Vitamin E</h3>
+            <p>Memiliki <i><b>anti aging</b></i> yang bisa mendorong perawatan kulit alami.</p>
+            <h3>2. Vitamin K</h3>
+            <p>Membantu <b>mencegah</b> terjadinya <i>osteoporosis.</i></p>
+            <h3>3. Vitamin B5</h3>
+            <p>Membantu <b>menurunkan</b> tingkat stress, meringankan rasa sakit.</p>
+            <h3>4. Vitamin B6</h3>
+            <p>Membantu <i><b>treat diabetes,</b></i> pendarahan menstruasi, dan insomnia</p>
+        </div>
     <div class="foto">
-
         <img src="images/alpukat_miki.png" alt="alpukat miki" />
         <img src="images/alpukat_mentega.png" alt="alpukat mentega" />
         <img src="images/alpukat_kendil.png" alt="alpukat kendil" />
         <img src="images/alpukat_aligator.png" alt="alpukat alpukat_aligator" />
-
     </div>
-
     <div>
         <table>
             <tr>
